2007-07-04  Stefan Harmeling  <harmeli@Muensterland.local>

	* prule.c, core.c: rewrote parts to simplify and implement the
	grammar and syntax in rhasyn20.pdf.  Simplifications include:
	+ only function calls need to be dealt with specially
	+ assignment and dots are simply prules as well
	          a.x         // dot_fn(a, x)
	+ assignment is special because it can eat up a dot on the LHS:
	          a.x = 5;    // assign_fn(a, x, 5)
	          x   = 5;    // assign_fn(local, x, 5)
	* eval.c: add a case for 'local'
	* eval.c: simplified assign(), obsolete loc() and assigntosymbol()
	* core.c: removed FUNCTION_FRAME.  Now blocks like { f(); g() }
	open a BLOCK_FRAME, i.e. b_do does open a frame that can be exited
	by 'return', but it doesn't open a new scope.  Instead function
	now don't open a frame (previously called FUNCTION_FRAME), but do
	open a new scope.
	* rhabarber.c: changed behavior of read_eval_loop(): now if the
	result is the none_obj we return 'none'.
	* removed a lot of the bind stuff, which is not necessary
	anymore, method and thisproxy stuff
	* OBSOLETE: method_tr, thisproxy_tr

	TODO:
	* add the prules for
	          if x>5 then 19;
	          while x>5 do { ... };
	          for x in l do { ... };
	          print "hello world" unless x>5;
	          ...
	* possibly remove the other "if (x>5) 19"
	* rename 'none' to 'void'
	* rename 'op=', 'op.' to 'assign_fn' and 'dot_fn' to get rid of
	the distinction between operators and functions.
	* we can probably simplify eval() much more.  Most of the cases
	should be handled automatically by function calls.
	* do we still need the proxy stuff?  the bind stuff?
	* the rha_call, rha_* stuff is probably still needed.  can it be
	simplified?
	* bug: just typing 'return' at the rhabarber prompt leads to an
	uncatched exception, however, it should trigger 'No block to
	return from.' message (see eval.h).
	* rewrite test.rha
	* default args and out-of-order args